v2, some cleanup and better login

--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -1,7 +1,7 @@
 {
   "pages": {
     "login": {
-      "title": "",
+      "title": "Login",
       "form": {
         "username": "Gebruiker",
         "password": "Password",
